apps/docs/src/app/(docs)/2.0/(spec)/elements/page.mdx
# Elements

Snaps are built from 17 components organized into four categories. Every component lives
in `ui.elements` as a named entry. The `type` field names the component; `props` carries
its configuration; `children` names child element IDs; `on` binds event handlers.

```json
"my-element": {
  "type": "text",
  "props": { "content": "Hello" }
}
```

| #   | Component                     | Category  | Description                               |
| --- | ----------------------------- | --------- | ----------------------------------------- |
| 1   | [badge](#badge)               | Display   | Inline label with color and icon          |
| 2   | [button](#button)             | Display   | Action button with variants and icon      |
| 3   | [icon](#icon)                 | Display   | Standalone icon from curated set          |
| 4   | [image](#image)               | Display   | HTTPS image with aspect ratio             |
| 5   | [item](#item)                 | Display   | Content row with actions slot             |
| 6   | [item_group](#item-group)     | Container | Groups items into a styled list           |
| 7   | [paginator](#paginator)       | Container | Client-side page navigation               |
| 8   | [progress](#progress)         | Display   | Horizontal progress bar                   |
| 9   | [separator](#separator)       | Display   | Visual divider                            |
| 10  | [stack](#stack)               | Container | Vertical or horizontal layout             |
| 11  | [text](#text)                 | Display   | Text block with size and weight           |
| 12  | [bar_chart](#bar-chart)       | Data      | Horizontal bar chart with labeled bars    |
| 13  | [cell_grid](#cell-grid)       | Data      | Colored cell grid, optionally interactive |
| 14  | [input](#input)               | Field     | Text or number input                      |
| 15  | [slider](#slider)             | Field     | Numeric range slider                      |
| 16  | [switch](#switch)             | Field     | Boolean toggle                            |
| 17  | [toggle_group](#toggle-group) | Field     | Single or multi-select choice group       |

**Field components** (`input`, `slider`, `switch`, `toggle_group`) collect user input.
Their values are sent in the POST payload under `inputs[name]` when a `submit` action
fires.

---

## badge

Inline label with color and optional icon. Use for metadata, status indicators, and
counts alongside content. `"default"` (filled) draws attention; `"outline"` is subtler.
Pair with an icon for scannability.

<ElementPreview type="badge" />

| Prop      | Type         | Required | Default     | Description                                    |
| --------- | ------------ | -------- | ----------- | ---------------------------------------------- |
| `label`   | string       | Yes      |             | Display text. Max 30 chars                     |
| `variant` | string       | No       | `"default"` | `"default"` (filled) or `"outline"` (bordered) |
| `color`   | PaletteColor | No       | `"accent"`  | Badge color                                    |
| `icon`    | IconName     | No       |             | Leading icon                                   |

```json
{ "type": "badge", "props": { "label": "New" } }
```

```json
{ "type": "badge", "props": { "label": "Live", "color": "green", "icon": "zap" } }
```

```json
{
  "type": "badge",
  "props": { "label": "ERC-20", "variant": "outline", "color": "blue" }
}
```

---

## button

Fires actions via `on.press` — the standard way to commit user input. Default variant is
`"secondary"` (bordered); use `"primary"` (filled) for the main CTA, typically one per
page. ([cell_grid](#cell-grid) also fires actions, via `on.press` per cell.) See
[Actions](/snap/actions) for the full list of action types.

<ElementPreview type="button" />

| Prop      | Type     | Required | Default       | Description               |
| --------- | -------- | -------- | ------------- | ------------------------- |
| `label`   | string   | Yes      |               | Button text. Max 30 chars |
| `variant` | string   | No       | `"secondary"` | Visual style              |
| `icon`    | IconName | No       |               | Leading icon              |

### Variants

| Variant     | Description                                       |
| ----------- | ------------------------------------------------- |
| `primary`   | Solid accent background, white text — primary CTA |
| `secondary` | Accent-colored border, transparent fill           |

```json
{
  "type": "button",
  "props": { "label": "Submit", "variant": "primary" },
  "on": {
    "press": { "action": "submit", "params": { "target": "https://my-snap.com/" } }
  }
}
```

```json
{
  "type": "button",
  "props": { "label": "Open" },
  "on": {
    "press": { "action": "open_url", "params": { "target": "https://example.com" } }
  }
}
```

---

## icon

Standalone icon from the curated set. Best as a visual accent inside item action slots
or horizontal stacks. Avoid using icons as standalone content — pair with text or use
inside a badge.

<ElementPreview type="icon" />

| Prop    | Type         | Required | Default    | Description                    |
| ------- | ------------ | -------- | ---------- | ------------------------------ |
| `name`  | IconName     | Yes      |            | Icon identifier                |
| `color` | PaletteColor | No       | `"accent"` | Icon color                     |
| `size`  | string       | No       | `"md"`     | `"sm"` (16px) or `"md"` (20px) |

```json
{ "type": "icon", "props": { "name": "star", "color": "amber" } }
```

### Available Icons

| Category   | Icons                                                      |
| ---------- | ---------------------------------------------------------- |
| Navigation | `arrow-right` `arrow-left` `external-link` `chevron-right` |
| Status     | `check` `x` `alert-triangle` `info` `clock`                |
| Social     | `heart` `message-circle` `repeat` `share` `user` `users`   |
| Content    | `star` `trophy` `zap` `flame` `gift`                       |
| Media      | `image` `play` `pause`                                     |
| Commerce   | `wallet` `coins`                                           |
| Actions    | `plus` `minus` `refresh-cw` `bookmark`                     |
| Feedback   | `thumbs-up` `thumbs-down` `trending-up` `trending-down`    |

---

## image

HTTPS image with fixed aspect ratio. Use `"4:1"` for compact banners, `"16:9"` for
larger hero imagery, `"1:1"` for avatars or thumbnails, `"4:3"` for general photos, and
`"9:16"` for tall portrait content. Optional `title` and `subtitle` render as readable
overlay text on the image.

<ElementPreview type="image" />

| Prop       | Type   | Required | Description                              |
| ---------- | ------ | -------- | ---------------------------------------- |
| `url`      | string | Yes      | HTTPS URL. GIFs autoplay and loop.       |
| `aspect`   | string | Yes      | `"1:1"` `"16:9"` `"4:3"` `"9:16"` `"4:1"` |
| `alt`      | string | No       | Alt text for accessibility               |
| `title`    | string | No       | Overlay title. Max 80 chars              |
| `subtitle` | string | No       | Overlay subtitle. Max 120 chars          |

```json
{
  "type": "image",
  "props": {
    "url": "https://example.com/photo.jpg",
    "aspect": "4:1",
    "title": "Trending now",
    "subtitle": "Updated 2 minutes ago"
  }
}
```

---

## item

The go-to component for structured content rows: leaderboards, settings, key-value info.
Mirrors shadcn `Item`: optional `media` renders on the left, title and description render
in the content area, and `children` render in the actions slot on the right. Items are
not interactive — don't use navigation-style affordances like `chevron-right`,
`arrow-right`, or `external-link` that imply the row itself is clickable.

<ElementPreview type="item" />

| Prop          | Type   | Required | Default     | Description                               |
| ------------- | ------ | -------- | ----------- | ----------------------------------------- |
| `title`       | string | Yes      |             | Primary text. Max 100 chars               |
| `description` | string | No       |             | Secondary text below title. Max 160 chars |
| `variant`     | string | No       | `"default"` | Visual style                              |
| `media`       | object | No       |             | Left-side media, like shadcn `ItemMedia`  |

### Variants

| Variant   | Description              |
| --------- | ------------------------ |
| `default` | No background, no border |

### Media

Rendered on the left, before the item content, matching shadcn `ItemMedia`.

| Media variant | Required fields | Optional fields |
| ------------- | --------------- | --------------- |
| `icon`        | `name`          | `color`         |
| `image`       | `url`           | `alt`, `round`  |

### Children

Rendered in the **actions slot** (right side). Badges, buttons, and icons are all fair
game — the item itself is not clickable, so pick trailing content that reads as content
(status icon, badge, button), not navigation. Avoid `chevron-right`, `arrow-right`, or
`external-link` on a plain item; they imply the row itself navigates.

```json
"score": {
  "type": "item",
  "props": {
    "title": "Engagement Score",
    "description": "Based on 24h activity",
    "media": { "variant": "icon", "name": "trending-up", "color": "green" }
  },
  "children": ["score-badge"]
},
"score-badge": { "type": "badge", "props": { "label": "92", "color": "green" } }
```

```json
"share": {
  "type": "item",
  "props": { "title": "Share this Snap", "description": "Pre-fill the composer" },
  "children": ["share-btn"]
},
"share-btn": {
  "type": "button",
  "props": { "label": "Share", "icon": "share" },
  "on": { "press": { "action": "compose_cast", "params": { "text": "Check out Snaps!" } } }
}
```

---

## item_group

Wraps related items for visual grouping. Use `separator: true` for settings-style lists
and `border: true` for card-like sections.

<ElementPreview type="item_group" />

| Prop        | Type    | Required | Default | Description                                          |
| ----------- | ------- | -------- | ------- | ---------------------------------------------------- |
| `border`    | boolean | No       | `false` | Show border around the group                         |
| `separator` | boolean | No       | `false` | Show divider lines between items                     |
| `gap`       | string  | No       |         | Spacing between items: `"none"` `"sm"` `"md"` `"lg"` |

**Children**: `item` elements only.

```json
"results": {
  "type": "item_group",
  "props": {},
  "children": ["r1", "r2", "r3"]
},
"r1": { "type": "item", "props": { "title": "First place", "description": "Alice" } },
"r2": { "type": "item", "props": { "title": "Second place", "description": "Bob" } },
"r3": { "type": "item", "props": { "title": "Third place", "description": "Charlie" } }
```

---

## progress

Horizontal progress bar for completion, scores, or any bounded numeric value. Always
uses the theme accent color. The label appears above the bar — use it for context like
"78%" or "Level 3 of 5".

<ElementPreview type="progress" />

| Prop    | Type   | Required | Description                            |
| ------- | ------ | -------- | -------------------------------------- |
| `value` | number | Yes      | Current value (0 to max, finite)       |
| `max`   | number | Yes      | Maximum value (must be > 0, finite)    |
| `label` | string | No       | Label text above the bar. Max 60 chars |

```json
{ "type": "progress", "props": { "value": 65, "max": 100, "label": "Upload progress" } }
```

---

## separator

Visual divider between logical sections of a page. Most snaps use 2-4 separators.
Overusing them creates visual clutter.

<ElementPreview type="separator" />

| Prop          | Type   | Required | Default        | Description                    |
| ------------- | ------ | -------- | -------------- | ------------------------------ |
| `orientation` | string | No       | `"horizontal"` | `"horizontal"` or `"vertical"` |

```json
{ "type": "separator", "props": {} }
```

---

## stack

Layout container for arranging children. Every page starts with a vertical stack as
root. Use horizontal stacks for button rows, badge groups, or side-by-side cards.
Nested **stack** children of a horizontal stack flex as peers (equal share of the row by default), so you usually do not need `columns` just to place two sections side by side.
`justify: "between"` is useful for navigation bars.

<ElementPreview type="stack" />

| Prop        | Type   | Required | Default            | Description                                                            |
| ----------- | ------ | -------- | ------------------ | ---------------------------------------------------------------------- |
| `direction` | string | No       | `"vertical"`       | `"vertical"` or `"horizontal"`                                         |
| `gap`       | string | No       | column-aware       | Spacing between children: `"none"` `"sm"` `"md"` `"lg"` (see below)    |
| `justify`   | string | No       |                    | Content alignment: `"start"` `"center"` `"end"` `"between"` `"around"` |
| `columns`   | number | No       |                    | Horizontal stacks only: `2`–`6` for an explicit equal column grid. Omit when children are stacks — nested stacks flex as row peers automatically. |

### Gap

`gap` resolves to a different pixel value depending on `direction`. Horizontal stacks use a tighter scale because their children sit side-by-side and tend to be wider:

| Size   | Vertical | Horizontal |
| ------ | -------- | ---------- |
| `none` | 0px      | 0px        |
| `sm`   | 4px      | 4px        |
| `md`   | 16px     | 8px        |
| `lg`   | 24px     | 16px       |

When `gap` is omitted, vertical stacks default to `"md"`. Horizontal stacks pick a default based on column count — denser layouts get tighter gaps:

| Columns | Default        |
| ------- | -------------- |
| 2       | `"lg"` (16px)  |
| 3       | `"md"` (8px)   |
| 4–6     | `"sm"` (4px)   |
| unknown | `"md"` (8px)   |

Column count is taken from `columns` when set, or inferred from button-row children. **An explicit `gap` always wins** — override the default when you have a deliberate visual reason (extra breathing room around a hero row, a visually compact toolbar, a hero+supporting-button pair where the loose `lg` default would feel disconnected).

```json
"page": {
  "type": "stack",
  "props": {},
  "children": ["header", "content", "actions"]
}
```

```json
"row": {
  "type": "stack",
  "props": { "direction": "horizontal", "gap": "sm" },
  "children": ["b1", "b2", "b3"]
}
```

---

## paginator

Client-side page navigation without a server round trip. Children are page element IDs;
the renderer shows one child at a time and can provide built-in previous/next controls
and page indicators. The current page index is json-render local UI state and is never included
in POST `inputs`.

Use `paginator` when one snap page would otherwise become too tall, especially for
multi-step input groups. A paginator can be the root element or a child inside a larger
layout. Its children may exceed the normal per-container child limit, but the snap still
must stay within the global 64-element limit and max nesting depth.

<ElementPreview type="paginator" />

| Prop             | Type    | Required | Default | Description                              |
| ---------------- | ------- | -------- | ------- | ---------------------------------------- |
| `initialPage`    | number  | No       | `0`     | Zero-based page to show first            |
| `showIndicators` | boolean | No       | `true`  | Show page dots below the active page     |
| `showControls`   | boolean | No       | `true`  | Show previous/next buttons               |
| `controlsPosition` | string | No     | `"bottom"` | Position for the built-in pagination bar: `"top"` or `"bottom"` |
| `transition`     | string  | No       | `"slide"` | Page-change animation: `"slide"` `"fade"` `"scale"` `"none"` |

Set both `showControls: false` and `showIndicators: false` to hide the built-in
pagination bar. Set `controlsPosition: "top"` to render the bar above page content
when you want the controls and dots to stay fixed while page content changes height.
Use `transition` to choose the local page-change animation, or `"none"` to disable it.
Buttons or tappable `cell_grid` cells anywhere in the same snap can bind local actions:

| Action               | Params                   | Behavior                                  |
| -------------------- | ------------------------ | ----------------------------------------- |
| `paginator_next`     | `{}`                     | Move to the next page locally             |
| `paginator_prev`     | `{}`                     | Move to the previous page locally         |
| `paginator_go_to`    | `{ "page": 0 }`          | Move to a zero-based page index locally   |

These actions affect the snap's rendered paginator and never submit POST input.
Only one paginator is supported per snap in this release.

```json
"pager": {
  "type": "paginator",
  "props": { "initialPage": 0 },
  "children": ["step-1", "step-2", "step-3"]
}
```

---

## text

The primary content element. Use `weight: "bold"` for headings and emphasis. Use
`size: "sm"` for captions, timestamps, and secondary info. Text does not clamp by
default; set `maxLines` when the content should use a bounded number of visible lines.

<ElementPreview type="text" />

| Prop      | Type   | Required | Default    | Description                     |
| --------- | ------ | -------- | ---------- | ------------------------------- |
| `content` | string | Yes      |            | Text content. Max 320 chars     |
| `size`    | string | No       | `"md"`     | `"md"` (body), `"sm"` (caption) |
| `weight`  | string | No       | `"normal"` | `"bold"` `"normal"`             |
| `align`   | string | No       | `"left"`   | `"left"` `"center"` `"right"`   |
| `maxLines` | number | No      | No clamp   | Visible lines before clamping (1–6) |

```json
{ "type": "text", "props": { "content": "Welcome to Snaps", "weight": "bold" } }
```

```json
{
  "type": "text",
  "props": {
    "content": "Last updated 2 hours ago",
    "size": "sm",
    "align": "center",
    "maxLines": 2
  }
}
```

---

## bar_chart

Horizontal bar chart for displaying ranked or comparative data. Each bar shows a label
on the left, a colored fill bar, and a numeric value on the right. Use for poll results,
leaderboards, or any ranked values.

<ElementPreview type="bar_chart" />

| Prop    | Type         | Required | Default    | Description                 |
| ------- | ------------ | -------- | ---------- | --------------------------- |
| `bars`  | object[]     | Yes      |            | 1–6 bar entries (see below) |
| `max`   | number       | No       | max value  | Upper bound for bar scale   |
| `color` | PaletteColor | No       | `"accent"` | Default bar color           |

### Bar Object

| Prop    | Type         | Required | Description             |
| ------- | ------------ | -------- | ----------------------- |
| `label` | string       | Yes      | Bar label. Max 40 chars |
| `value` | number       | Yes      | Bar value (≥ 0)         |
| `color` | PaletteColor | No       | Per-bar color override  |

```json
{
  "type": "bar_chart",
  "props": {
    "bars": [
      { "label": "Poblano", "value": 42 },
      { "label": "Negro", "value": 38 },
      { "label": "Verde", "value": 15, "color": "green" }
    ]
  }
}
```

---

## cell_grid

Grid of colored cells for pixel art, game boards, color pickers, and small data
matrices. Cells are defined sparsely — only specify cells that have color or content.

There are two interaction modes, and they are mutually exclusive:

1. **Press to act** — leave `select` at `"off"` and bind `on.press`. Each press writes the
   pressed cell's `value` (or `"row,col"` if no `value` is set) to `inputs[name]` and fires
   the bound action (e.g. `submit`). No selection ring; cells behave like a grid of buttons.
2. **Press to select** — set `select: "single"` or `"multiple"`. Each press accumulates
   selection state with a visual ring; nothing is posted. Pair with a separate `button`
   that submits the accumulated selection. Multi-select joins values with `|`.

Don't combine `on.press` with a non-`"off"` `select` mode — the auto-fire would defeat
the accumulating selection. The component ignores `on.press` whenever `select` is on.

<ElementPreview type="cell_grid" />

| Prop        | Type     | Required | Default      | Description                                                         |
| ----------- | -------- | -------- | ------------ | ------------------------------------------------------------------- |
| `name`      | string   | No       | `"grid_tap"` | POST inputs key for the tapped or selected cells                    |
| `cols`      | number   | Yes      |              | Column count (2–32)                                                 |
| `rows`      | number   | Yes      |              | Row count (2–16)                                                    |
| `cells`     | object[] | Yes      |              | Sparse cell definitions (see below)                                 |
| `gap`       | string   | No       | `"sm"`       | Cell spacing: `"none"` (0px) `"sm"` (1px) `"md"` (2px) `"lg"` (4px) |
| `cellAspectRatio` | string | No    | `"auto"`    | Cell shape: `"auto"` uses `rowHeight`; `"square"` keeps each cell square based on column width |
| `rowHeight` | number   | No       | `28`         | Pixel height per row (8–64). Grid height = rows × rowHeight         |
| `maxWidth`  | string   | No       | `"lg"`       | Maximum grid width token: `"sm"` `"md"` `"lg"`. `"lg"` is full-width/default; constrained grids center themselves |
| `select`    | string   | No       | `"off"`      | Selection mode: `"off"` (use with `on.press`) `"single"` `"multiple"` |

### Events

| Event | Fires when                                                                 |
| ----- | -------------------------------------------------------------------------- |
| `press` | A cell is pressed, **only when `select` is `"off"`**. `inputs[name]` is set to the pressed cell's `value` (or `"row,col"` if no `value` is set) before the action runs, so a bound `submit` POST includes the pressed cell. |

### Cell Object

| Prop      | Type         | Required | Description            |
| --------- | ------------ | -------- | ---------------------- |
| `row`     | number       | Yes      | Row index (0-based)    |
| `col`     | number       | Yes      | Column index (0-based) |
| `color`   | PaletteColor or `#rrggbb` | No       | Cell fill color (hex is independent of page accent) |
| `textColor` | PaletteColor or `#rrggbb` | No       | Cell text color. When omitted, clients choose an auto-contrast color from the cell fill. |
| `content` | string       | No       | Cell text content      |
| `value`   | string       | No       | POST value when this cell is pressed/selected (1–30 chars). When omitted, `"row,col"` is used. Use this for grids whose cells carry meaningful labels (calendar days, alphabet pickers, region maps) so action handlers don't need to reverse-lookup row/col. |

**Press to act** — `select: "off"` (default) + `on.press`. Each press fires immediately:

```json
{
  "type": "cell_grid",
  "props": {
    "name": "color_grid",
    "cols": 4,
    "rows": 4,
    "cells": [
      { "row": 0, "col": 0, "color": "red" },
      { "row": 0, "col": 3, "color": "blue" }
    ]
  },
  "on": {
    "press": { "action": "submit", "params": { "target": "https://my-snap.com/" } }
  }
}
```

**Press to select** — `select: "single"` or `"multiple"`. Presses update the selection
without posting; pair with a `button` that submits when the user is done:

```json
{
  "type": "cell_grid",
  "props": {
    "cols": 4,
    "rows": 4,
    "cells": [
      { "row": 0, "col": 0, "color": "red" },
      { "row": 0, "col": 3, "color": "blue" },
      { "row": 1, "col": 1, "color": "green", "content": "X" },
      { "row": 3, "col": 3, "color": "purple" }
    ],
    "cellAspectRatio": "square",
    "select": "multiple"
  }
}
```

**Value-bearing cells** — when each cell represents a meaningful label (a calendar
day, an alphabet letter, a region code), set `value` to keep the action handler
clean. The handler receives the value directly instead of having to translate
`"row,col"` back into a label:

```json
{
  "type": "cell_grid",
  "props": {
    "name": "day",
    "cols": 7,
    "rows": 5,
    "cells": [
      { "row": 0, "col": 0, "value": "1", "content": "1" },
      { "row": 0, "col": 1, "value": "2", "content": "2" },
      { "row": 0, "col": 2, "value": "3", "content": "3" }
    ]
  },
  "on": {
    "press": { "action": "submit", "params": { "target": "https://my-snap.com/" } }
  }
}
```

The POST handler reads `inputs.day` as `"3"` directly — no row/col math.

---

## input

Text or number input field for short free-text entry. Set `type: "number"` for numeric
input (changes the mobile keyboard). Always provide a `label` for accessibility. Value
is collected in POST inputs under `name`.

<ElementPreview type="input" />

| Prop           | Type   | Required | Default  | Description                          |
| -------------- | ------ | -------- | -------- | ------------------------------------ |
| `name`         | string | Yes      |          | Input name (POST inputs key)         |
| `type`         | string | No       | `"text"` | `"text"` or `"number"`               |
| `label`        | string | No       |          | Label text above input. Max 60 chars |
| `placeholder`  | string | No       |          | Placeholder text. Max 60 chars       |
| `defaultValue` | string | No       |          | Pre-filled value                     |
| `maxLength`    | number | No       |          | Max character count (1–280)          |

POST value: string.

```json
{
  "type": "input",
  "props": { "name": "email", "label": "Email", "placeholder": "you@example.com" }
}
```

---

## slider

Numeric range slider for bounded choices like ratings, quantities, or percentages.
Always set meaningful `min`/`max` values and add a `label` so users know what they're
adjusting. Value is collected in POST inputs under `name`.

<ElementPreview type="slider" />

| Prop           | Type    | Required | Default  | Description                                 |
| -------------- | ------- | -------- | -------- | ------------------------------------------- |
| `name`         | string  | Yes      |          | Slider name (POST inputs key)               |
| `min`          | number  | Yes      |          | Minimum value (must be ≤ max)               |
| `max`          | number  | Yes      |          | Maximum value (must be ≥ min)               |
| `step`         | number  | No       | `1`      | Increment step (must be > 0, finite)        |
| `defaultValue` | number  | No       | midpoint | Initial value (must be between min and max) |
| `label`        | string  | No       |          | Label text above slider. Max 60 chars       |
| `showValue`    | boolean | No       | `false`  | Display the current value next to the label |

POST value: number.

```json
{
  "type": "slider",
  "props": {
    "name": "rating",
    "label": "Rating (1–10)",
    "min": 1,
    "max": 10,
    "showValue": true
  }
}
```

---

## switch

Boolean toggle for binary preferences (on/off, yes/no). Good for settings-style pages —
the label should describe the enabled state ("Enable notifications", not "Notifications
toggle"). Value is collected in POST inputs under `name`.

<ElementPreview type="switch" />

| Prop             | Type    | Required | Default | Description                                |
| ---------------- | ------- | -------- | ------- | ------------------------------------------ |
| `name`           | string  | Yes      |         | Switch name (POST inputs key)              |
| `label`          | string  | No       |         | Label text beside the switch. Max 60 chars |
| `defaultChecked` | boolean | No       | `false` | Initial checked state                      |

POST value: boolean.

```json
{
  "type": "switch",
  "props": { "name": "notifications", "label": "Enable notifications" }
}
```

---

## toggle_group

Choice group for selecting between 2-6 discrete options. Prefer this over multiple
buttons when the choices are parallel and exclusive. Use `multiple: true` for
multi-select scenarios like tags or interests. Value is collected in POST inputs under
`name`.

<ElementPreview type="toggle_group" />

| Prop           | Type               | Required | Default        | Description                                    |
| -------------- | ------------------ | -------- | -------------- | ---------------------------------------------- |
| `name`         | string             | Yes      |                | Group name (POST inputs key)                   |
| `options`      | string[]           | Yes      |                | Choice labels. Min 2, max 6. Each max 30 chars |
| `multiple`     | boolean            | No       | `false`        | Allow multiple selections                      |
| `orientation`  | string             | No       | `"horizontal"` | `"horizontal"` or `"vertical"`                 |
| `defaultValue` | string or string[] | No       |                | Pre-selected option(s)                         |
| `variant`      | string             | No       | `"default"`    | `"default"` (solid) or `"outline"` (bordered)  |
| `label`        | string             | No       |                | Label text above the group. Max 60 chars       |

POST value: the selected option string (or string[] when `multiple` is `true`).

```json
{
  "type": "toggle_group",
  "props": {
    "name": "plan",
    "label": "Choose a plan",
    "options": ["Free", "Pro", "Team"]
  }
}
```

```json
{
  "type": "toggle_group",
  "props": {
    "name": "interests",
    "label": "Select interests",
    "multiple": true,
    "orientation": "vertical",
    "options": ["Dev", "Design", "Data", "Product"]
  }
}
```
